--- a/zadacki/rocketBody.html
+++ b/zadacki/rocketBody.html
@@ -26,6 +26,25 @@
         <label>Glow Intensity:</label>
         <input type="range" id="glowIntensity" min="0" max="2" step="0.1" value="1">
     </div>
+    <!-- Menu Toggle Button -->
+<button id="menuToggle">Menu</button>
+
+<!-- The Menu Itself -->
+<div id="menu" class="hidden">
+  <select id="colorSelect">
+    <option value="gray">Gray</option>
+    <option value="white">White</option>
+    <option value="custom">Custom</option>
+  </select>
+
+  <input type="color" id="customColor" />
+
+  <button id="toggleRotation">Stop Rotation</button>
+
+  <label for="glowIntensity">Glow:</label>
+  <input type="range" id="glowIntensity" min="0" max="1" step="0.05" value="1" />
+</div>
+
 
     <!-- Three.js Canvas -->
     <div id="container"></div>
