--- a/zadacki/rocketBody.html
+++ b/zadacki/rocketBody.html
@@ -41,7 +41,7 @@
 
   <button id="toggleRotation">Stop Rotation</button>
 
-  <label for="glowIntensity">Glow:</label>
+  <label for="glowIntensity">Glowing:</label>
   <input type="range" id="glowIntensity" min="0" max="1" step="0.05" value="1" />
 </div>
 
